# sxsim

./: CMakeLists.txt  README  configure.cmake  instruction_tree.txt  instructions.txt  scratch.txt  sxsim.sln
Debug/: sxsim.ilk
python/: CMakeLists.txt  blink.py  cluster.py  create_wrapper.py  label_address.py  performance.py  python_wrapper.cpp  test.py
sxsim/: CMakeLists.txt  ReadMe.txt  arithmetic_with_flags.hpp  as_binary.hpp  flags.hpp  generic_sx_implementation.hpp  instruction_decoder.hpp  instruction_list.hpp  listing_parser.cpp  listing_parser.hpp  memory_events.hpp  simulated_devices.cpp  simulated_devices.hpp  stdafx.cpp  sx_cluster.cpp  sx_cluster.hpp  sx_compiler.hpp  sx_controller.hpp  sx_instruction_list.hpp  sx_instruction_names.hpp  sx_lcd_display.hpp  sx_memory.hpp  sx_nop.hpp  sx_print.hpp  sx_simulator.cpp  sx_simulator.hpp  sx_state.hpp  sxsim.cpp  sxsim.vcproj  targetver.h
sxsim/Debug/: BuildLog.htm  mt.dep
sxsim/Release/: BuildLog.htm  mt.dep  vc90.idb
test/: blink.lst  knight.lst  retw_table.lst  simple_timer.SRC  simple_timer.lst  temp_sensor.lst  uart_vp.lst  wireless_display.lst  wireless_transmitter.lst
ui/: CMakeLists.txt  pause.xpm  step.xpm  stop.xpm  sxgo_app.cpp  sxgo_app.hpp  sxgo_doc.cpp  sxgo_doc.hpp  sxgo_event_definitions.hpp  sxgo_frame.cpp  sxgo_frame.hpp  sxgo_label_window.cpp  sxgo_label_window.hpp  sxgo_listing_window.cpp  sxgo_listing_window.hpp  sxgo_ram_window.cpp  sxgo_ram_window.hpp  sxgo_variables_window.cpp  sxgo_variables_window.hpp  sxgo_view.cpp  sxgo_view.hpp  sxgoui.cpp
v0.1.0/: CMakeLists.txt  configure.cmake  sxgo.dia  sxinstructions.ods
v0.1.0/eclipse/: invoke_cmake.cmd
v0.1.0/python/: create_wrapper.py  test.py
v0.1.0/sxsim/: arithmetic_with_flags.hpp  as_binary.hpp  flags.hpp  instruction_decoder.hpp  listing_parser.cpp  sx_controller.hpp  sx_print.hpp  sx_state.hpp
v0.1.0/test/: thermostat.lst
v0.1.0/ui/: CMakeLists.txt  play.xpm  size_report_control.hpp  sxgo_doc.cpp  sxgo_event_definitions.hpp  sxgo_label_window.hpp  sxgo_listing_window.hpp  sxgo_variables_window.cpp  sxgo_variables_window.hpp  sxgoui.xpm
